--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = elicited
-version = 0.0.2
+version = 0.0.3
 author = Ryan McGeehan
 author_email = elicited@r10n.com
 description = Helpers for expert elicitation into distributions.
@@ -19,6 +19,9 @@ package_dir =
     = src
 packages = find:
 python_requires = >=3.6
+install_requires = 
+    numpy
+    scipy
 
 [options.packages.find]
 where = src
