--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = elicited
-version = 0.0.4
+version = 0.0.4=5
 author = Ryan McGeehan
 author_email = elicited@r10n.com
 description = Helpers for expert elicitation into distributions.
